# open-audio-stream

./: .dockerignore  CMakeLists.txt  README.md  build.sh  install_build_dep.sh
docker/: Dockerfile.builder  Dockerfile.receiver  Dockerfile.transmitter
src/: main-receiver.cpp  main-transmitter.cpp
